[#116597955] Fix z-index

--- a/app/assets/stylesheets/backend/module/_activity_action.scss
+++ b/app/assets/stylesheets/backend/module/_activity_action.scss
@@ -17,7 +17,7 @@
   width: 100%;
   height: 3rem;
   background-color: #fff;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0 -5px 43px rgba(0, 0, 0, 0.5);
 
   a {
